--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ show_hero: true
 # Social Media Settings
 # Remove the item if you don't need it
 github_username: 0xdiablos
-facebook_username: 0xdiablos
+facebook_username: 0xDiablosTeam
 
 
 # Theme Settings
